@@ -1,3 +1,11 @@
+2017-09-01  Marek Polacek  <polacek@redhat.com>
+
+	Backported from mainline
+	2017-09-01  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/82040
+	* typeck.c (cp_build_unary_op): Avoid re-entering reporting routines.
+
 2017-08-25  Marek Polacek  <polacek@redhat.com>
 
 	Backported from mainline
